--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -308,12 +308,12 @@ voor elke maat $M$ geldt: $M(A,A)=1$ en $M(A,B)=M(B,A)$.
 \hline
 \\[1pt]
 $
-\begin{array}{rcl}
+\begin{array}{r@{\ }c@{\ }l}
 \displaystyle M_{1a}(A,B) & = & \displaystyle 1-\frac{1}{|X|}\sum_{x \in X} | A(x) - B(x) | \\
 \displaystyle M_{1b}(A,B) & = & \displaystyle 1-\left(\frac{1}{|X|}\sum_{x \in X} | A(x) - B(x) |^2\right)^\frac{1}{2} \\
 \displaystyle M_{1c}(A,B) & = & \displaystyle 1-\left(\frac{1}{|X|}\sum_{x \in X} | A(x) - B(x) |^4\right)^\frac{1}{4} \\
 \end{array}
-\begin{array}{rcl}
+\begin{array}{r@{\ }c@{\ }l}
 \displaystyle M_2(A,B) & = & \displaystyle 1 - \max_{x \in X} | A(x) - B(x) | \\[10pt]
 \displaystyle M_3(A,B) & = & \displaystyle 1 - \frac{\displaystyle \sum_{x \in X} | A(x) - B(x) |}{\displaystyle |A| + |B|} \\
 \end{array}
@@ -323,7 +323,7 @@ $
 \hline
 \\[1pt]
 $
-\begin{array}{rcl}
+\begin{array}{r@{\ }c@{\ }l}
 \displaystyle M_5(A,B) & = & \displaystyle \frac{\min \{|A|,|B|\}}{\max \{|A|,|B|\}} \\[10pt]
 \displaystyle M_{5c}(A,B) & = & \displaystyle \frac{\min \{|A^c|,|B^c|\}}{\max \{|A^c|,|B^c|\}} \\[10pt]
 \displaystyle M_6(A,B) & = & \displaystyle \frac{|A \cap B|}{|A \cup B|} \\[10pt]
@@ -333,7 +333,7 @@ $
 \displaystyle M_8(A,B) & = & \displaystyle \frac{|A \cap B|}{\min \{|A|,|B|\}} \\[10pt]
 \displaystyle M_{8c}(A,B) & = & \displaystyle \frac{|A^c \cap B^c|}{\min \{|A^c|,|B^c|\}} \\[10pt]
 \end{array}
-\begin{array}{@{\qquad}rcl}
+\begin{array}{@{\qquad}r@{\ }c@{\ }l}
 \displaystyle M_9(A,B) & = & \displaystyle \frac{\min \{|A|,|B|\}}{|A \cup B|} \\[10pt]
 \displaystyle M_{9c}(A,B) & = & \displaystyle \frac{\min \{|A^c|,|B^c|\}}{|A^c \cup B^c|} \\[10pt]
 \displaystyle M_{10}(A,B) & = & \displaystyle \frac{\max \{|A|,|B|\}}{|A \cup B|} \\[10pt]
@@ -349,10 +349,10 @@ $
 \hline
 \\[1pt]
 $
-\begin{array}{rcl}
+\begin{array}{r@{\ }c@{\ }l}
 \displaystyle M_{I_3}(A,B) & = & \displaystyle \frac{|(A \cap B) \cap (A^c \cap B^c)|}{|(A \cup B) \cap (A^c \cup B^c)|}
 \end{array}
-\begin{array}{@{\qquad}rcl}
+\begin{array}{@{\qquad}r@{\ }c@{\ }l}
 \displaystyle M_{I_{3c}}(A,B) & = & \displaystyle \frac{|(A^c \cap B^c) \cup (A \cap B)|}{|(A^c \cup B^c) \cup (A \cup B)|}
 \end{array}
 $
